--- a/index.html
+++ b/index.html
@@ -53,9 +53,12 @@
     </div>
 
     <h2>Authors</h2>
-<p>Samuel Dana (s.dana@prometheuscomputing.com)<br/><br/>      </p>
+<p>Sam Dana (s.dana@prometheuscomputing.com)
+<br/>
+<br/>      </p>
 <h2>Contact</h2>
-<p>Sam Dana (s.dana@prometheuscomputing.com)<br/>      </p>
+<p>Sam Dana (s.dana@prometheuscomputing.com)
+<br/>      </p>
 
 
     <h2>Download</h2>
